# limits

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/limits-const/: Cargo.toml  rust-toolchain.toml
crates/proc-builder/: Cargo.toml
crates/tensor/: Cargo.toml
crates/tensor-old/: Cargo.toml
crates/tensor/docs/: .gitignore  slick_stem_paper_input.tex  tensor-crate-docs.tex
crates/tensor/src/: group.rs  lib.rs  macros.rs  main.rs  ndarray.rs  ndarray_old.rs  num_field.rs  sym.rs  tensor_traits.rs  tensorspace.rs  util.rs
crates/tensor/src/bk/: index.rs
crates/tensor/src/group/: cyclic.rs  group_impl.rs  mod.rs  permutation.rs
crates/tensor/src/num_field/: field_impl.rs
crates/tensor/src/sym/: scalar.rs
crates/tensor/src/tensor_traits/: impl_traits.rs
crates/tensor/src/util/: disjunct_sets.rs  disjunct_tuple.rs
crates/tensor/src/vector_space/: _ops.rs  field_impl.rs  finite.rs  mod.rs  num_field.rs  ops.rs  vector_space_impl.rs
crates/tensor/tensor-derive/: Cargo.toml
crates/tensor/tensor-derive-new/: Cargo.toml
crates/tensor/tensor-derive-new-test/: Cargo.toml
crates/tensor/tensor-derive-new-test/src/: lib.rs  test_abel_g_is_abelian.rs  trait_impl.rs
crates/tensor/tensor-derive-new/src/: group.rs  lib.rs  util.rs  wrappers.rs
crates/tensor/tensor-derive-new/src/group/: abel_group.rs  common.rs  mult_group.rs
crates/tensor/tensor-derive-new/src/util/: path_attrs.rs  struct_vis.rs  unit_types.rs
crates/tensor/tensor-derive/src/: group.rs  lib.rs  reexport.rs  vector_space.rs  wrappers.rs
crates/tensor/tensor-derive/src/util/: attr_repr.rs  data_quote.rs  group.rs  mod.rs
crates/tensor/tensor-traits/: Cargo.toml
crates/tensor/tensor-traits/src/: group.rs  lib.rs  num_field.rs
crates/tensor/tensor-traits/src/trait_impl/: field_impl.rs  group_impl.rs  mod.rs  vector_space_impl.rs
crates/tensor/tensor-traits/src/vector_space/: finite.rs
examples/relativity/: lorentz.rs  main.rs
src/: array_impl.rs  auto.rs  func.rs  lib.rs  main.rs  multivar.rs  neighbours.rs  num.rs  num_bk.rs  set.rs  tensor.rs  vector.rs
src/func/: blankets.rs  cst.rs  f64.rs  func_impl.rs  id.rs  monom.rs  ops.rs  trig.rs  var.rs
tex/: limits-documentation.tex
(+38 files in other folders)
