[package]
name = "limits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# limits-const = { path = "crates/limits-const" }
limits-tensor = { path = "crates/tensor" }
# num-bigint = "*"
# num-complex = "*"
# num-traits = "*"
num = "*"


[[example]]
name = "relativity"


# [[example]]
# name = "lie-groups"


