[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
# num-complex = "*"
tensor-derive = { path = "tensor-derive"}
tensor-derive-new = { path = "tensor-derive-new"}
tensor-traits = { path = "tensor-traits"}
tensor-derive-new-test = { path = "tensor-derive-new-test"}
