[package]
name = "tensor-derive-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full"]}
quote = "*"
num-traits = "*"
tensor-traits = { path = "../tensor-traits"}
# proc-builder = { path = "../../proc-builder"}
