[package]
name = "tensor-derive-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full", "visit"]}
quote = "*"
proc-macro2 = "*"
num-traits = "*"
tensor-traits = { path = "../tensor-traits"}
petgraph = "*"
paste = "*"
# proc-builder = { path = "../../proc-builder"}
