[package]
name = "tensor-traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
num-complex = { version = "*", optional = true}


[features]
default = ["complex"]
complex = ["dep:num-complex"]

